--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "slim/slim": "^3.4",
         "slim/php-view": "^2.0",
         "hiropeke/slim-blade-view": "dev-master",
-        "monolog/monolog": "^1.17"
+        "monolog/monolog": "^1.17",
+        "illuminate/database": "*"
     },
     "autoload": {
         "psr-4": {
